
_____________________________________________________________________________________________________


                                       CFDWARP CHANGELOG

_____________________________________________________________________________________________________


2022 JUL 27a
  * in model/chem
    - added _C2H4_Air_23s
  * in model/transport/doc/report.tex
    - fixed a mistake in the table outlining the ion mobilities
  * in src/control.c
    - added Zettervall bib
  * in src/main.c
    - in write_options(), added "(EXPERIMENTAL)" to the mpi input and output (-im, -im1, -om etc) 
      flags
  * in tools/chemkin2cfdwarp.c
    - fixed a bug related to the UNIX vs Windows end of line characters. Now, the code should
      work whether the CHEMKIN file was written with a Windows or a UNIX editor
    - made the description of the functions more detailed
  * in tools/makepng.sh
    - got rid of "ConvertTo256Colors = Yes". This leads to problems when too many contour
      levels are specified in the style file
      

2022 JUL 26a
  * in tools/chemkin2cfdwarp.c
    - added comments describing each function
    - fixed a memory leak
  * in model/emfield/_Epotential*/emfield.c
    - in write_disc_emfield_template(), added a better description of what Ediv does
    
 
2022 JUL 25a
  * in model/fluid/_Favre-Reynolds/fluid.c
    - in write_model_fluid_template(), added templates for body forces and heat addition
    - in read_model_fluid_actions_2(), calls read_model_fluid_actions_Fbody_Qadd()
    - in read_model_fluid_actions(), initialize Qadd and Fbody
  * in model/fluid/_Favre-Reynolds/fluid.hh and model/fluid/_Navier-Stokes_perfect/fluid.hh
    - added #define _FLUID_FBODY_QADD
  * in model/fluid/_Favre-Reynolds/fluid_source.c
    - in find_Sstar(), added Qadd and Fbody contributions
  * in model/fluid/_Navier-Stokes_perfect/fluid.c
    - in read_model_fluid_actions_2(), replaced all the coding by a call to 
      read_model_fluid_actions_Fbody_Qadd()