@@ -3,6 +3,10 @@ echo "Removing proprietary directory .././model/chem/_C12H23_Cs_Air_Plasma_21s"
 rm -rf .././model/chem/_C12H23_Cs_Air_Plasma_21s 
 cp -a _proprietary .././model/chem/_C12H23_Cs_Air_Plasma_21s 
 ( printf "current C12H23_Cs_Air_Plasma_21s\nEND" ) > .././model/chem/_C12H23_Cs_Air_Plasma_21s/.config 
+echo "Removing proprietary directory .././model/chem/_C2H4_Air_Plasma_30s"
+rm -rf .././model/chem/_C2H4_Air_Plasma_30s 
+cp -a _proprietary .././model/chem/_C2H4_Air_Plasma_30s 
+( printf "current C2H4_Air_Plasma_30s\nEND" ) > .././model/chem/_C2H4_Air_Plasma_30s/.config 
 echo "Removing proprietary directory .././model/chem/_Cs_Air_Plasma_11s"
 rm -rf .././model/chem/_Cs_Air_Plasma_11s 
 cp -a _proprietary .././model/chem/_Cs_Air_Plasma_11s 
@@ -27,10 +31,6 @@ echo "Removing proprietary directory .././model/chem/_H2_He_CH4_Plasma_13s"
 rm -rf .././model/chem/_H2_He_CH4_Plasma_13s 
 cp -a _proprietary .././model/chem/_H2_He_CH4_Plasma_13s 
 ( printf "current H2_He_CH4_Plasma_13s\nEND" ) > .././model/chem/_H2_He_CH4_Plasma_13s/.config 
-echo "Removing proprietary directory .././model/chem/_C2H4_Air_Plasma_30s"
-rm -rf .././model/chem/_C2H4_Air_Plasma_30s 
-cp -a _proprietary .././model/chem/_C2H4_Air_Plasma_30s 
-( printf "current C2H4_Air_Plasma_30s\nEND" ) > .././model/chem/_C2H4_Air_Plasma_30s/.config 
 echo "Removing proprietary directory .././model/fluid/_Navier-Stokes_plasma"
 rm -rf .././model/fluid/_Navier-Stokes_plasma 
 cp -a _proprietary .././model/fluid/_Navier-Stokes_plasma 
